force-app/main/default/objects/vlocity_ps__ContractTypeTerm__c/fields/vlocity_ps__AttributeSelectedValues__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AttributeSelectedValues__c</fullName>
    <label>Attribute Selected Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>