force-app/main/default/objects/vlocity_ps__ContractTypeTerm__c/fields/vlocity_ps__ContractTypeId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractTypeId__c</fullName>
    <label>Contract Document</label>
    <referenceTo>vlocity_ps__ContractType__c</referenceTo>
    <relationshipLabel>Contract Type Terms</relationshipLabel>
    <relationshipName>ContractTypeTerms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>