force-app/main/default/objects/vlocity_ps__ContractTypeTerm__c/fields/vlocity_ps__TermSpecProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TermSpecProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Spec</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Type Terms</relationshipLabel>
    <relationshipName>ContractTypeTerms</relationshipName>
    <type>Lookup</type>
</CustomField>